--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^5.0.0",
-    "hugo-bin": "^0.23.0",
+    "hugo-bin": "^0.29.0",
     "imports-loader": "^0.8.0",
     "node-sass-tilde-importer": "^1.0.2",
     "postcss-cssnext": "^3.1.0",
@@ -53,5 +53,6 @@
   },
   "resolutions": {
     "natives": "1.1.3"
-  }
+  },
+  "devDependencies": {}
 }
