--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-flatten": "^0.4.0",
+    "gulp-google-webfonts": "^1.1.1",
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^7.0.1",
     "gulp-print": "^5.0.0",
