--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
+    "run-sequence": "^2.2.1",
     "url-loader": "^1.0.1",
     "webpack": "4.6.0",
     "whatwg-fetch": "^2.0.4"
