--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^5.0.1",
-    "hugo-bin": "^0.29.0",
+    "hugo-bin": "git+https://github.com/jtgry/hugo-bin.git",
     "imports-loader": "^0.8.0",
     "node-sass-tilde-importer": "^1.0.2",
     "npm": "^6.2.0",
