--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,9 @@
 [build.environment]
   HUGO_VERSION = "0.46"
 
+[context.production.environment]
+  HUGO_ENV = "production"
+  NODE_ENV = "production"
+
 [context.deploy-preview]
   command = "npm run build-preview"
