--- a/site/config.toml
+++ b/site/config.toml
@@ -24,7 +24,7 @@ name = "Dr. Peaden"
 url = "/dr-peaden/"
 weight = 2
 [params]
-description = "At Lake Martin Chiropractic we know that patient relationships are important. Our staff always puts the needs and wellbeing of our patients first. We strive to offer affordable healthcare, and to serve the needs of patients so they can enjoy life without restrictions."
+description = "At Lake Martin Chiropractic we know that patient relationships are important. Our staff always puts the needs and wellbeing of our patients first."
 email = "lakemartinchiro@gmail.com"
 facebook = "https://www.facebook.com/Lake-Martin-Chiropractic-Health-Center-126017201362305/"
 instagram = "https://www.instagram.com/lakemartinchiropractic/"
